--- a/er-core-staff-scheduler/Gemfile
+++ b/er-core-staff-scheduler/Gemfile
@@ -14,6 +14,8 @@ group :assets do
   gem 'sass-rails',   '~> 3.2.3'
   gem 'coffee-rails', '~> 3.2.1'
 
+  gem 'bootstrap-sass', '~> 3.3.3'
+
   # See https://github.com/sstephenson/execjs#readme for more supported runtimes
   # gem 'therubyracer', :platforms => :ruby
 
@@ -37,4 +39,4 @@ gem 'jquery-rails'
 # To use debugger
 # gem 'debugger'
 
-gem 'haml'
+gem 'haml', '~> 4.0.6'
