--- a/er-core-staff-scheduler/Gemfile
+++ b/er-core-staff-scheduler/Gemfile
@@ -22,6 +22,13 @@ group :assets do
   gem 'uglifier', '>= 1.0.3'
 end
 
+group :development, :test do
+  gem 'database_cleaner'
+  gem 'cucumber-rails', :require => false
+  gem 'rspec-rails', '~> 2.14.0'
+  gem 'simplecov'
+end
+
 gem 'jquery-rails'
 
 # To use ActiveModel has_secure_password
