--- a/er-core-staff-scheduler/Gemfile
+++ b/er-core-staff-scheduler/Gemfile
@@ -6,6 +6,15 @@ gem 'rails', '3.2.18'
 # gem 'rails', :git => 'git://github.com/rails/rails.git'
 
 gem 'sqlite3'
+group :development, :test do
+  gem 'sqlite3'
+  gem 'ruby-debug19'
+  gem 'database_cleaner'
+  gem 'cucumber-rails', :require => false
+  gem 'rspec-rails', '~> 2.14.0'
+  gem 'simplecov'
+  #gem 'simplecov', :require => false, :group => :test
+end
 
 
 # Gems used only for assets and not required
