--- a/er-core-staff-scheduler/Gemfile
+++ b/er-core-staff-scheduler/Gemfile
@@ -13,7 +13,7 @@ gem 'sqlite3'
 group :assets do
   gem 'sass-rails',   '~> 3.2.3'
   gem 'coffee-rails', '~> 3.2.1'
-
+  gem 'therubyracer'
   gem 'bootstrap-sass', '~> 3.3.3'
 
   # See https://github.com/sstephenson/execjs#readme for more supported runtimes
