--- a/er-core-staff-scheduler/Gemfile
+++ b/er-core-staff-scheduler/Gemfile
@@ -8,12 +8,22 @@ gem 'rails', '3.2.18'
 gem 'sqlite3'
 
 
+group :development, :test do
+  gem 'sqlite3'
+  gem 'ruby-debug19'
+  gem 'cucumber-rails', :require => false
+  gem 'database_cleaner'
+  gem 'rspec-rails', '~> 2.14.0'
+  gem 'simplecov'
+end
+
+
 # Gems used only for assets and not required
 # in production environments by default.
 group :assets do
   gem 'sass-rails',   '~> 3.2.3'
   gem 'coffee-rails', '~> 3.2.1'
-
+  gem 'therubyracer'
   gem 'bootstrap-sass', '~> 3.3.3'
 
   # See https://github.com/sstephenson/execjs#readme for more supported runtimes
