--- a/er-core-staff-scheduler/Gemfile
+++ b/er-core-staff-scheduler/Gemfile
@@ -1,11 +1,12 @@
 source 'https://rubygems.org'
 
 gem 'rails', '3.2.18'
+gem 'rake'
 
 # Bundle edge Rails instead:
 # gem 'rails', :git => 'git://github.com/rails/rails.git'
 
-gem 'sqlite3'
+gem 'sqlite3', '~> 1.3.10'
 group :development, :test do
   gem 'database_cleaner'
   gem 'cucumber-rails', :require => false
@@ -49,4 +50,3 @@ gem 'jquery-rails'
 gem 'haml', '~> 4.0.6'
 gem "bcrypt-ruby", :require => "bcrypt"
 gem 'rerun'
-gem 'rake'
