--- a/er-core-staff-scheduler/.travis.yml
+++ b/er-core-staff-scheduler/.travis.yml
@@ -1,3 +1,10 @@
 language: ruby
 rvm:
-  - 1.9.3
+  - 1.26.10
+gemfile:
+  - gemfiles/Gemfile-travis
+env:
+  - DB=postgresql
+script:
+  - RAILS_ENV=test bundle exec rake db:migrate --trace
+  - bundle exec rake db:test:prepare
