--- a/er-core-staff-scheduler/.travis.yml
+++ b/er-core-staff-scheduler/.travis.yml
@@ -1,6 +1,11 @@
 language: ruby
 rvm:
-  - 2.1.5
+  - "1.8.7"
+  - "1.9.2"
+  - "1.9.3"
+  - jruby-18mode # JRuby in 1.8 mode
+  - jruby-19mode # JRuby in 1.9 mode
+  - rbx
 gemfile:
   - gemfiles/Gemfile-travis
 env:
