--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ rvm:
   - 1.9.3
 gemfile:
   - gemfiles/Gemfile-travis
-  - install: gem install rake
+  - install: gem 'rake'
 env:
   - DB=postgresql
 script:
