--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,7 @@
 language: ruby
 rvm:
-  - 1.9.3
+  - "1.9.3"
 gemfile:
-  - gemfiles/Gemfile-travis
-env:
-  - DB=postgresql
-script:
-  - RAILS_ENV=test bundle exec rake db:migrate --trace
-  - bundle exec rake db:test:prepare
+  - Gemfile
+install:
+  - bundle install
