Final Commit for Iteration 1-2

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ gemfile:
 install:
   - bundle install
 script:
-  - rake db:migrate
-  - rake db:test:prepare
-  - rake
+  - rake db:migrate db:test:prepare db:seed
+  - rake cucumber
+  - rake spec
